<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Lotus Lantern</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="string_about">About</string>
    <string name="string_add_device">Add</string>
    <string name="string_ble_connected">Connected</string>
    <string name="string_ble_disconnected">Disconnected</string>
    <string name="string_ble_not_support">BLE Unsupported</string>
    <string name="string_bluetooth_not_support">Bluetooth Unsupported</string>
    <string name="string_color_change">Adjust</string>
    <string name="string_connection_pending">Connecting or disconnecting, please send data later</string>
    <string name="string_connection_pending1">Device Connecting…</string>
    <string name="string_custom">Preset</string>
    <string name="string_delete_device">Delete Device</string>
    <string name="string_delete_group">Delete Group?</string>
    <string name="string_display_time">00:00</string>
    <string name="string_empty_data">Empty Data</string>
    <string name="string_group_manage">Group Manage</string>
    <string name="string_group_name">Name</string>
    <string name="string_l_music">Online</string>
    <string name="string_mode">Style</string>
    <string name="string_mode_bright">Brightness:%d</string>
    <string name="string_mode_speed">Speed:%d</string>
    <string name="string_music">Music</string>
    <string name="string_music_list_loading">Loading music list</string>
    <string name="string_navigation">Guide</string>
    <string name="string_nearby_devices">My Devices</string>
    <string name="string_new_group">Add</string>
    <string name="string_no_name">Unknown Device</string>
    <string name="string_null_music_info">......</string>
    <string name="string_online_music_baidu">BaiduMusic</string>
    <string name="string_online_music_kugou">KugouMusic</string>
    <string name="string_online_music_qq">QQMusic</string>
    <string name="string_online_music_xmly">XimalayaFM</string>
    <string name="string_permission_bluetooth">Bluetooth</string>
    <string name="string_permission_bluetooth_admin">Bluetooth Admin</string>
    <string name="string_permission_coarse_location">Coarse Location</string>
    <string name="string_permission_fine_location">Fine Location</string>
    <string name="string_permission_location_request_message">This function requires open the location button of system.\10\10Please click OK and go to settings.</string>
    <string name="string_permission_modify_audio_settings">Modify Audio Settings</string>
    <string name="string_permission_reading_storage">Read Storage</string>
    <string name="string_permission_recording">Record Audio</string>
    <string name="string_permission_request_message">This function requires following permissions\10\10%s\10Please click OK and go to settings.</string>
    <string name="string_pin_sequence">Modify Pin Sequence</string>
    <string name="string_recent_devices">Recent Devices</string>
    <string name="string_rename">Rename</string>
    <string name="string_save_to_group">Save to Group?</string>
    <string name="string_select_device">Select Device</string>
    <string name="string_shake_shake">Shake</string>
    <string name="string_streaming">Mic</string>
    <string name="string_streaming_classic">Classic</string>
    <string name="string_streaming_disco">Disco</string>
    <string name="string_streaming_dynamic">Dynamic</string>
    <string name="string_streaming_external_mic">External MIC</string>
    <string name="string_streaming_phone_mic">Phone MIC</string>
    <string name="string_streaming_sensitivity">Sensitivity:</string>
    <string name="string_streaming_soft">Soft</string>
    <string name="string_timing">Schedule</string>
    <string name="string_timing_power_off_alarm">Schedule Off</string>
    <string name="string_timing_power_off_time">Time</string>
    <string name="string_timing_power_on_alarm">Schedule On</string>
    <string name="string_timing_power_on_time">Time</string>
    <string name="string_timing_week_repeat">Repeat</string>
    <string name="string_typical">Classic</string>
    <string name="string_unknown_music">Unknow Music</string>
</resources>
