<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:layout_gravity="center_horizontal" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginTop="20dp" android:layout_weight="5.2">
        <ImageView android:id="@+id/id_iv_send_amplitude" android:layout_width="45dp" android:layout_height="45dp" android:src="@drawable/ic_hop_n" android:scaleType="centerCrop" android:layout_marginStart="10dp"/>
        <RadioGroup android:layout_gravity="end" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginEnd="20dp">
            <RadioButton android:id="@+id/id_rb_phone_mic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/string_streaming_phone_mic"/>
            <RadioButton android:id="@+id/id_rb_external_mic" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_streaming_external_mic"/>
        </RadioGroup>
        <TextView android:id="@+id/id_tv_recording_db" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        <p021wl.smartled.views.CircleProgressView android:layout_gravity="center" android:id="@+id/id_cpv_amplitude" android:layout_width="200dp" android:layout_height="200dp"/>
        <ImageView android:layout_gravity="center" android:id="@+id/id_iv_start_recording" android:layout_width="60dp" android:layout_height="60dp" android:src="@drawable/ic_microphone"/>
    </FrameLayout>
    <FrameLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="0dp" android:layout_weight="1.8">
        <p021wl.smartled.views.VoiceLineView android:id="@+id/id_vlv_voice" android:layout_width="match_parent" android:layout_height="match_parent" app:fineness="3" app:lineSpeed="90" app:maxVolume="200" app:middleLine="@android:color/holo_green_light" app:middleLineHeight="1dp" app:rectSpace="2dp" app:rectWidth="5dp" app:sensibility="4" app:viewMode="0" app:voiceLine="@android:color/holo_blue_bright"/>
    </FrameLayout>
    <LinearLayout android:orientation="vertical" android:id="@+id/id_ll_external_mic_options" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="3">
        <RadioGroup android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginStart="10dp" android:layout_marginEnd="10dp">
            <RadioButton android:id="@+id/id_rb_classic" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/string_streaming_classic" android:layout_weight="1"/>
            <RadioButton android:id="@+id/id_rb_soft" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/string_streaming_soft" android:layout_weight="1"/>
            <RadioButton android:id="@+id/id_rb_dynamic" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/string_streaming_dynamic" android:layout_weight="1"/>
            <RadioButton android:id="@+id/id_rb_disco" android:layout_width="0dp" android:layout_height="wrap_content" android:checked="true" android:text="@string/string_streaming_disco" android:layout_weight="1"/>
        </RadioGroup>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/string_streaming_sensitivity" android:layout_marginStart="8dp"/>
        <LinearLayout android:gravity="center_vertical" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="6dp" android:layout_marginStart="14dp" android:layout_marginEnd="8dp">
            <ImageView android:layout_width="25dp" android:layout_height="25dp" android:src="@drawable/ic_microphone"/>
            <SeekBar android:layout_gravity="center_vertical" android:id="@+id/id_sb_sensitive" android:layout_width="0dp" android:layout_height="wrap_content" android:max="100" android:progress="50" android:layout_weight="1"/>
            <TextView android:textSize="13sp" android:gravity="center" android:id="@+id/id_tv_sensitive" android:layout_width="25dp" android:layout_height="25dp" android:text="50"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
