<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/ic_bg" android:layout_width="match_parent" android:layout_height="match_parent">
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <include layout="@layout/layout_back_action"/>
        <TextView android:textSize="20sp" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_add_device"/>
    </FrameLayout> t 
    <LinearLayout android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_nearby_devices"/>
        <TextView android:textSize="16sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":"/>
    </LinearLayout>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <ListView android:id="@+id/id_lv_nearby_devices" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </FrameLayout>
    <LinearLayout android:padding="16dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <TextView android:textSize="16sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_recent_devices"/>
        <TextView android:textSize="16sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=":"/>
    </LinearLayout>
    <FrameLayout android:visibility="gone" android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <ListView android:id="@+id/id_lv_recent_devices" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
