<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="26sp" android:ellipsize="marquee" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@+id/id_tv_music_name" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="150dp" android:layout_height="wrap_content" android:text="@string/string_unknown_music" android:maxLines="1"/>
    <FrameLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textSize="20sp" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@+id/id_tv_music_info" android:layout_width="160dp" android:layout_height="wrap_content" android:text="@string/string_null_music_info"/>
        <ImageView android:layout_gravity="end" android:id="@+id/id_iv_play_mode" android:layout_width="20dp" android:layout_height="20dp" android:src="@drawable/ic_playsequence" android:layout_marginEnd="30dp"/>
    </FrameLayout>
    <LinearLayout android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp">
        <ImageView android:layout_gravity="center" android:id="@+id/id_iv_play_prev_music" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_play_last"/>
        <ImageView android:id="@+id/id_iv_play_pause_music" android:layout_width="50dp" android:layout_height="50dp" android:src="@drawable/ic_muisc_stop" android:layout_marginStart="30dp"/>
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/id_iv_play_next_music" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_play_next" android:layout_marginStart="30dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15dp">
        <TextView android:textSize="12sp" android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:id="@+id/id_tv_music_play_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_display_time"/>
        <SeekBar android:id="@+id/id_sb_play_progress" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1"/>
        <TextView android:textSize="12sp" android:gravity="center_horizontal" android:layout_gravity="center_vertical" android:id="@+id/id_tv_music_total_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/string_display_time"/>
    </LinearLayout>
    <View android:background="@color/colorCuttingLineBK" android:layout_width="wrap_content" android:layout_height="1dp"/>
    <FrameLayout android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
        <LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="vertical" android:id="@+id/id_ll_music_list_loading" android:background="@drawable/ic_loading_bg" android:padding="16dp" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60dp">
            <ProgressBar android:layout_width="30dp" android:layout_height="30dp" android:indeterminateDrawable="@drawable/progress_drawable_white"/>
            <TextView android:textSize="16dp" android:textColor="#fff" android:layout_gravity="center_vertical" android:id="@+id/id_tv_loadingmsg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/string_music_list_loading"/>
        </LinearLayout>
        <ListView android:id="@+id/id_lv_music_list" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </FrameLayout>
</LinearLayout>
